@@ -209,6 +209,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug#0001934: Poller sig_handler Bug
 -bug#0001936: Removing Data Sources is Inneficient 
 -bug#0001937: The Cacti Technical Support Page Uses Check Table Which Blocks 
+-bug#0001941: Queries are run twice
 -bug: accept "Connection refused" on TCP ping tests
 -bug: add missing row selection to graph preview
 -bug: script server throws "undefined variable" error when in debug mode
